# blackjack

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  resources.qrc
app/src/: main.cpp  mainwindow.cpp  mainwindow.h
app/src/enums/cardEnums/: cardenums.cpp  cardenums.h
app/src/enums/resultEnums/: resultenums.cpp  resultenums.h
app/src/gameScene/: gamescene.cpp  gamescene.h
app/src/gameScene/animations/cardAnimator/: cardanimator.cpp  cardanimator.h
app/src/gameScene/controller/: scenecontroller.cpp  scenecontroller.h
app/src/gameScene/enums/cardEnums/: cardenums.cpp  cardenums.h
app/src/gameScene/items/buttonItem/: buttonitem.cpp  buttonitem.h
app/src/gameScene/items/cardItem/: cardItem.cpp  cardItem.h  icard.h
app/src/gameScene/items/cards/: icard.h
app/src/gameScene/items/cards/characterCard/: charactercard.cpp  charactercard.h
app/src/gameScene/items/cards/digitCard/: digitcard.cpp  digitcard.h
app/src/gameScene/items/cashLabel/: cashlabel.cpp  cashlabel.h
app/src/gameScene/items/dibItem/: dibitem.cpp  dibitem.h
app/src/gameScene/items/factory/: cardfactory.cpp  cardfactory.h  icardfactory.h
app/src/gameScene/items/labels/: ilabel.h
app/src/gameScene/items/labels/betLabel/: betlabel.cpp  betlabel.h
app/src/gameScene/items/labels/pointLabel/: pointlabel.cpp  pointlabel.h
app/src/gameScene/items/players/: iplayer.h
app/src/gameScene/items/players/dealer/: dealer.cpp  dealer.h
app/src/gameScene/items/players/player/: player.cpp  player.h
app/src/gameScene/items/popup/: popup.cpp  popup.h
app/src/gameScene/items/themeItem/: themeitem.cpp  themeitem.h
app/src/gameScene/media/: media.cpp  media.h
app/src/mainView/: mainview.cpp  mainview.h
app/src/model/controller/: modelcontroller.cpp  modelcontroller.h
app/src/model/items/: carditem.cpp  icard.h
app/src/model/items/cardItem/: carditem.cpp  carditem.h  icard.h
app/src/model/items/players/: iplayer.h
app/src/model/items/players/player/: player.cpp  player.h
